[gd_scene load_steps=13 format=2]

[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=1]
[ext_resource path="res://Scenes/ganha.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=8]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ganha" parent="." instance=ExtResource( 2 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 925.616, 699.224 )

[node name="horacarrorapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="horacarrodevagar" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0235294, 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="placar2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.984314, 0.0235294, 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.984314, 0.0235294, 1 )
text = "
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ganhou" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -36.454

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Button" type="Button" parent="."]
margin_left = 496.0
margin_top = 317.755
margin_right = 796.0
margin_bottom = 397.755
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 0.984314, 0.0235294, 1 )
custom_colors/font_color = Color( 1, 0.984314, 0.0235294, 1 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="horacarrorapido" to="." method="_on_horacarrorapido_timeout"]
[connection signal="timeout" from="horacarrodevagar" to="." method="_on_horacarrodevagar_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
